# quest3-foxglove-mcap

./: .gitignore  .gitmodules  AGENTS.md  SLAM_AGENT_GUIDE.md  VIO_AGENT_GUIDE.md  axes_yz_swap.md  main.py  pyproject.toml  script1.py  script2.py
slam/: README.md  cli.py  data_contract.md  pipeline_data_to_mcap.py  rtabmap_notes.md
slam/adapters/: euroc_to_mcap.py  export_euroc.py  export_tum.py
slam/algorithms/: depth_pnp_vo.py  open3d_rgbd_odometry.py  orbslam3.py  rtabmap.py
slam/baselines/: depth_pnp_vo.py
slam/config/: orbslam3_quest3_stereo.yaml
slam/core/: check_capture.py  pipeline.py  quest_dataset.py
slam/docs/: external_projects.md  open3d_vs_euroc.md  rtabmap_notes.md  slam_vio_learning_guide.md
slam/eval/: evaluate_evo.py  evaluate_evo.sh
slam/qa/: check_capture.py
slam/runners/: run_data_to_euroc_to_mcap.sh  run_depth_pnp_vo.sh  run_orbslam3_stereo.sh  run_orbslam3_stereo_inertial.sh  run_rtabmap_from_mcap.sh
